@@ -23,12 +23,12 @@
   <groupId>org.superbiz</groupId>
   <artifactId>multiple-arquillian-adapters</artifactId>
   <packaging>jar</packaging>
-  <version>8.0.0-SNAPSHOT</version>
+  <version>8.0.1-SNAPSHOT</version>
   <name>TomEE :: Examples :: Multiple Arquillian Adapters</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <tomee.version>8.0.0-SNAPSHOT</tomee.version>
+    <tomee.version>8.0.1-SNAPSHOT</tomee.version>
     <arquillian.version>1.1.10.Final</arquillian.version>
   </properties>
 
@@ -63,6 +63,7 @@
             </goals>
             <configuration>
               <skip>${maven.test.skip}</skip>
+              <argLine>-Djdk.attach.allowAttachSelf</argLine>
               <groups>org.superbiz.embedded.standalone.Embedded</groups>
               <systemPropertyVariables>
                 <arquillian.launch>embedded</arquillian.launch>
@@ -94,6 +95,7 @@
             <configuration>
               <skip>${maven.test.skip}</skip>
               <groups>org.superbiz.tomee.embedded.TomEEEmbedded</groups>
+              <argLine>-Djdk.attach.allowAttachSelf</argLine>
               <systemPropertyVariables>
                 <arquillian.launch>tomee-embedded</arquillian.launch>
                 <openejb.arquillian.adapter>tomee-embedded</openejb.arquillian.adapter>
@@ -137,7 +139,7 @@
     <dependency>
       <groupId>org.apache.tomee</groupId>
       <artifactId>javaee-api</artifactId>
-      <version>8.0</version>
+      <version>[8.0,)</version>
       <scope>provided</scope>
     </dependency>
 
